--- a/src/main/resources/templates/registraruser.html
+++ b/src/main/resources/templates/registraruser.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="es" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <div th:replace="Complementos/head :: head"></div>
     <link rel="stylesheet" href="assets/css/styles.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <title>Registrar</title>
+    <title>VidaSalud</title>
 </head>
 <body>
+
 <p class="error" th:if="${error!=null}" th:text="${error}"></p>
 <p class="exito" th:if="${exito!=null}" th:text="${exito}"></p>
 
