--- a/src/main/resources/templates/Complementos/header.html
+++ b/src/main/resources/templates/Complementos/header.html
@@ -7,9 +7,16 @@
                     <a th:href="@{/inicio}" class="nav__link">Home</a>
                 </li>
                 <li class="nav__item">
+                    <a th:href="@{/agenda}" class="nav__link">Agenda tu Cita</a>
+                </li>
+                <li class="nav__item">
+                    <a th:href="@{/especialidades}" class="nav__link">Especialidades</a>
+                </li>
+                <li class="nav__item">
                     <a th:href="@{/}" class="nav__link">Logout</a>
                 </li>
             </ul>
         </div>
     </nav>
 </header>
+
