Se agrego la recomendacion de medico, actualizo la logica de mostrar datos po JS

--- a/src/main/resources/templates/agendaCita.html
+++ b/src/main/resources/templates/agendaCita.html
@@ -21,18 +21,22 @@
         <form action="" class="row justify-content-center mb-4" id="formulario">
 
             <div class="row justify-content-md-center my-3">
-                <div class="col col-lg-3">
-                    <label for="">Especialidad :</label>
+                <div class="col col-lg-2">
+                    <h5><label for="">Especialidad :</label></h5>
                 </div>
                 <div class="col col-lg-3">
                     <select name="" class="" id="option_especialidades" >
                     </select>
                 </div>
             </div>
-
+            <div class="row justify-content-md-center">
+                <div class="col col-lg-5">
+                    <h6><p id="Rec_medico"></p></h6>
+                </div>
+            </div>
             <div class="row justify-content-md-center my-3">
-                <div class="col col-lg-3">
-                    <label for="">Medico :</label>
+                <div class="col col-lg-2">
+                    <h5><label for="">Medico :</label></h5>
                 </div>
                 <div class="col col-lg-3">
                     <select name="id_Medico" class="" id="option_medico" >
@@ -41,31 +45,31 @@
                 </div>
             </div>
             <div class="row justify-content-md-center my-3">
-                <div class="col col-lg-6">
-                    <label for="">Fecha :</label>
+                <div class="col col-lg-5">
+                    <h5><label for="">Fecha :</label></h5>
                     <input class="form-control" type="date"  id="fechaAtencion" name="fechaAtencion" >
                 </div>
             </div>
             <div class="row justify-content-md-center my-3">
-                <div class="col col-lg-6">
-                    <label for="">Hora :</label>
+                <div class="col col-lg-5">
+                    <h5><label for="">Hora :</label></h5>
                     <input class="form-control" type="time"  id="horaAtencion" name="horaAtencion" >
                 </div>
             </div>
             <div class="row justify-content-md-center my-3">
 
-                <div class="col col-lg-6">
-                    <label for="">Observacion</label>
+                <div class="col col-lg-5">
+                    <h5><label for="">Observacion</label></h5>
                     <input class="form-control" type="textarea" placeholder="¿Deseas dejar una nota?" id="observaciones" name="observaciones"   >
                 </div>
             </div>
             <div class="row justify-content-md-center my-3">
-                <div class="col col-lg-6 d-flex justify-content-center">
+                <div class="col col-lg-5 d-flex justify-content-center">
                     <input class="btn btn-success add-btn" type="submit" value="AGENDAR CITA" id="enviar">
                 </div>
             </div>
             <div class="row justify-content-md-center my-3">
-                <div class="col col-lg-6">
+                <div class="col col-lg-5">
                     <p id="respuesta"></p>
                 </div>
             </div>
