--- a/src/main/resources/templates/Complementos/header.html
+++ b/src/main/resources/templates/Complementos/header.html
@@ -13,8 +13,15 @@
                     <a th:href="@{/especialidades}" class="nav__link">Especialidades</a>
                 </li>
                 <li class="nav__item">
+                    <a th:href="@{/plansalud}" class="nav__link">Plan Salud</a>
+                </li>
+                <li class="nav__item">
+                    <a th:href="@{/ubicanos}" class="nav__link">Ubicanos</a>
+                </li>
+                <li class="nav__item">
                     <a th:href="@{/}" class="nav__link">Logout</a>
                 </li>
+
             </ul>
         </div>
     </nav>
