Correciones y nuevas tablas

--- a/src/main/resources/templates/agendaCita.html
+++ b/src/main/resources/templates/agendaCita.html
@@ -25,7 +25,7 @@
                     <h5><label for="">Especialidad :</label></h5>
                 </div>
                 <div class="col col-lg-3">
-                    <select name="" class="" id="option_especialidades" >
+                    <select name="especialidadMedico" class="" id="option_especialidades" >
                     </select>
                 </div>
             </div>
