--- a/src/main/resources/templates/citas.html
+++ b/src/main/resources/templates/citas.html
@@ -23,13 +23,12 @@
             <table class="table table-striped table-white">
                 <thead>
                     <tr>
-                        <th>ID</th>
-                        <th>ID MÉDICO</th>
-                        <th>ID PACIENTE</th>
-                        <th>ID USUARIO</th>
+                        <th>Numero Cita</th>
+                        <th>Paciente</th>
+                        <th>Medico</th>
+                        <th>Especialidad</th>
                         <th>FECHA ATENCION</th>
                         <th>HORA ATENCION</th>
-                        <th>OBSERVACIONES</th>
                         <th>ACCIONES</th>
                     </tr>
                 </thead>
